--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a href="https://www.facebook.com/profile.php?id=100068214011808" target="_blank"><i class='bx bxl-facebook-circle' ></i></a>
                 <a href="https://www.instagram.com/jeeyemm_01/" target="_blank"><i class='bx bxl-instagram' ></i></a>
                 <a href="https://www.tiktok.com/@j_mark_01" target="_blank"><i class='bx bxl-tiktok' ></i></a>
-                <a href= target="_blank"><i class='bx bxl-github'></i></a>
+                <a href= "https://github.com/jeyemm1" target="_blank"><i class='bx bxl-github'></i></a>
             </div>
         </div>  
             <div class="home-img">
@@ -171,7 +171,7 @@
                 <h1>Tiktok</h1>
             </div>
             <div class="social-box">
-                <a href="https://www.tiktok.com/@j_mark_01" target="_blank"><i class='bx bxl-github' ></i></a>
+                <a href="https://github.com/jeyemm1" _blank"><i class='bx bxl-github' ></i></a>
                 <h1>Github</h1>
             </div>
         </div>
